use remark-interlinear-gloss

--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -1,4 +1,6 @@
 ---
+import "remark-interlinear-gloss/styles.css";
+
 import Layout from "./Layout.astro";
 import type { MarkdownLayoutProps } from "astro";
 
