--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: "Noto Sans";
-  src: url("/fonts/NotoSans.ttf") format("truetype");
+  src: url("/fonts/NotoSans-var.ttf") format("truetype");
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
@@ -26,7 +26,7 @@
 
 @font-face {
   font-family: "Noto Sans";
-  src: url("/fonts/NotoSans-Italic.ttf") format("truetype");
+  src: url("/fonts/NotoSans-var-Italic.ttf") format("truetype");
   font-weight: 100 900;
   font-style: italic;
   font-display: swap;
